add endpoint create produc and implementation multer
